--- a/In_Class_Assignment_2.ipynb
+++ b/In_Class_Assignment_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOvjdSahoTzQfkjQTRAH7MH",
+      "authorship_tag": "ABX9TyMBQZ7h0oL91/bCyrluGcZQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -70,6 +70,39 @@
         "\n",
         "print(f\"Taxes: ${Taxes}\")\n",
         "print(f\"Net income: ${Net_Income}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Inputs\n",
+        "D=int(input(\"Insert Annual demand\"))\n",
+        "S=float(input(\"Insert reorder cost\"))\n",
+        "H=float(input(\"Insert holding cost\"))\n",
+        "\n",
+        "#Output\n",
+        "EOQ=(2*D*S/H)**(1/2)\n",
+        "print(f\"EQO = {EOQ} units\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JS4qIsZFncXm",
+        "outputId": "e588b23b-6576-43f1-8eae-bbaac966366f"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Insert Annual demand20\n",
+            "Insert reorder cost20\n",
+            "Insert holding cost20\n",
+            "EQO = 6.324555320336759 units\n"
+          ]
+        }
       ]
     }
   ]
