--- a/In_Class_Assignment_2.ipynb
+++ b/In_Class_Assignment_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBQZ7h0oL91/bCyrluGcZQ",
+      "authorship_tag": "ABX9TyNCK7atK+S3YBkmJIroGnRd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
         "id": "JS4qIsZFncXm",
         "outputId": "e588b23b-6576-43f1-8eae-bbaac966366f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,6 +101,138 @@
             "Insert reorder cost20\n",
             "Insert holding cost20\n",
             "EQO = 6.324555320336759 units\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=9\n",
+        "\n",
+        "if x%2==0:\n",
+        "  if x%3==0:\n",
+        "    print(\"x is divisible by both 2 and 3.\")\n",
+        "  else:\n",
+        "    print('x is divisible by 2 but not by 3.')\n",
+        "elif x%3==0:\n",
+        "  print('x is divisible by 3 but not by 2.')\n",
+        "else:\n",
+        "  print('x is not divisible by 2 nor 3.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PYDk9KlLbRQr",
+        "outputId": "073f919f-2d11-419e-f0e7-6d8803d45b3b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x is divisible by 3 but not by 2.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if x%2==0 and x%3==0:\n",
+        "  print('x is divisible by both')\n",
+        "elif x%2==0:\n",
+        "  print('x is divisible by 2 only')\n",
+        "elif x%3==0:\n",
+        "  print('x is divisible by 3 only')\n",
+        "else:\n",
+        "  print('x is divisible by none')"
+      ],
+      "metadata": {
+        "id": "QnKMG6H-hNeX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if x%2==0:\n",
+        "  s='even'\n",
+        "else:\n",
+        "  s='odd'"
+      ],
+      "metadata": {
+        "id": "WBycxztQku6h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('even' if x%2==0 else 'odd')"
+      ],
+      "metadata": {
+        "id": "6qsP2CSKk04y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "##MINI CALCULATOR##\n",
+        "\n",
+        "##Input Values\n",
+        "N1=float(input(\"Enter first number: \"))\n",
+        "O=input('Enter operation: ')\n",
+        "N2=float(input(\"Enter second number: \"))\n",
+        "\n",
+        "##Calculations\n",
+        "if O=='+':\n",
+        "  sum=N1+N2\n",
+        "  print(\"result=\",sum)\n",
+        "elif O=='-':\n",
+        "  subtraction=N1-N2\n",
+        "  print(\"result=\",subtraction)\n",
+        "elif O=='/':\n",
+        "  division=N1/N2\n",
+        "  print('result=',division)\n",
+        "elif O=='x':\n",
+        "  multiplication=N1*N2\n",
+        "  print('result=',multiplication)\n",
+        "elif O==\"**\":\n",
+        "  power=N1**N2\n",
+        "  print('result=',power)\n",
+        "elif O==\"%\":\n",
+        "  remainder=N1%N2\n",
+        "  print('result=',remainder)\n",
+        "elif O==\"//\":\n",
+        "  divide2=N1//N2\n",
+        "  print('result=',divide2)\n",
+        "else:\n",
+        "  print(\"Error, operation not found\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n7wntT1DqZmc",
+        "outputId": "2d59f9dd-3c6b-45e8-9435-4bae04d5461c"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter first number: 5\n",
+            "Enter operation: //\n",
+            "Enter second number: 2\n",
+            "result= 2.0\n"
           ]
         }
       ]
