--- a/In_Class_Assignment_2.ipynb
+++ b/In_Class_Assignment_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCK7atK+S3YBkmJIroGnRd",
+      "authorship_tag": "ABX9TyPeLfDPoP9RvPi4xvK0D/l0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -223,7 +223,7 @@
         "id": "n7wntT1DqZmc",
         "outputId": "2d59f9dd-3c6b-45e8-9435-4bae04d5461c"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,6 +233,42 @@
             "Enter operation: //\n",
             "Enter second number: 2\n",
             "result= 2.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for hours in range (1,9):\n",
+        "  if hours<2:\n",
+        "    print(hours,10)\n",
+        "  elif hours>6:\n",
+        "    print(hours,20)\n",
+        "  else:\n",
+        "    print(hours,hours*2.5+5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ICQ_UCJobrnA",
+        "outputId": "a2faeead-aa29-4c6d-a550-70cb87d31c0a"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 10\n",
+            "2 10.0\n",
+            "3 12.5\n",
+            "4 15.0\n",
+            "5 17.5\n",
+            "6 20.0\n",
+            "7 20\n",
+            "8 20\n"
           ]
         }
       ]
