--- a/In_Class_Assignment_2.ipynb
+++ b/In_Class_Assignment_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPeLfDPoP9RvPi4xvK0D/l0",
+      "authorship_tag": "ABX9TyM0aZIgtMBrMPV6ZvJmVAqp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -255,7 +255,7 @@
         "id": "ICQ_UCJobrnA",
         "outputId": "a2faeead-aa29-4c6d-a550-70cb87d31c0a"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,6 +269,39 @@
             "6 20.0\n",
             "7 20\n",
             "8 20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for ad in range (0,201,25):\n",
+        "  revenue=10*(20+2*ad**0.5)-200-ad\n",
+        "  print(ad,round(revenue,1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ONGMh3g6vww9",
+        "outputId": "23fd56f9-5d8e-4fa5-884b-3b42103c6a92"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 0.0\n",
+            "25 75.0\n",
+            "50 91.4\n",
+            "75 98.2\n",
+            "100 100.0\n",
+            "125 98.6\n",
+            "150 94.9\n",
+            "175 89.6\n",
+            "200 82.8\n"
           ]
         }
       ]
