--- a/In_Class_Assignment_2.ipynb
+++ b/In_Class_Assignment_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM0aZIgtMBrMPV6ZvJmVAqp",
+      "authorship_tag": "ABX9TyP/gTQz1c+rKaXrVI5aWX9q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -287,7 +287,7 @@
         "id": "ONGMh3g6vww9",
         "outputId": "23fd56f9-5d8e-4fa5-884b-3b42103c6a92"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,6 +303,155 @@
             "175 89.6\n",
             "200 82.8\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a= 'This is a string'\n",
+        "\n",
+        "for char in a:\n",
+        "  if char=='i':\n",
+        "    print(char)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fsRgqtQehlJx",
+        "outputId": "27f13c15-60f9-4d39-d363-edddaa0c4928"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "i\n",
+            "i\n",
+            "i\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L=[5,'hello',[3,4,5]]\n",
+        "\n",
+        "L.extend([1,2,3])\n",
+        "print(L)\n",
+        "\n",
+        "#L.extend is the append of composite numbers\n",
+        "#L.pop() removes last object\n",
+        "#L.sort() makes it ascending order, L.sort(reverse=True) makes it descending\n",
+        "#Sort only works with pure lists (lists with values of the same type)\n",
+        "\n",
+        "L2=['bde','a','c','e']\n",
+        "L2.sort()\n",
+        "L2\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c7uabSbPlPBg",
+        "outputId": "ba716bf9-7fdc-4d03-b9ab-92cc0b8e87f3"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[5, 'hello', [3, 4, 5], 1, 2, 3]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['a', 'bde', 'c', 'e']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list1=[]\n",
+        "cond=True\n",
+        "while cond==True:\n",
+        "  number=int(input(\"Please enter a number\"))\n",
+        "  if number!=0:\n",
+        "    list1.append(number)\n",
+        "  else:\n",
+        "    cond=False\n",
+        "\n",
+        "list1.sort(reverse=True)\n",
+        "print(list1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RxIpjmGQyKd2",
+        "outputId": "0ef49b93-10f6-4a17-ee71-709cb9a15f0d"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter a number1\n",
+            "Please enter a number3\n",
+            "Please enter a number2\n",
+            "Please enter a number0\n",
+            "[3, 2, 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Dictionaries\n",
+        "d={\n",
+        "    'Bob':95,\n",
+        "    'Alice':98,\n",
+        "    'Eve':90\n",
+        "  }\n",
+        "len(d)\n",
+        "\n",
+        "#d['Eve']=95\n",
+        "#'David' in d\n",
+        "#d.keys()\n",
+        "#d.values()\n",
+        "#d.items()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7EM0Nxed8d7F",
+        "outputId": "b1431434-fc0f-4ddb-8360-6adcc2012407"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
         }
       ]
     }
