--- a/In_Class_Assignment_2.ipynb
+++ b/In_Class_Assignment_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP/gTQz1c+rKaXrVI5aWX9q",
+      "authorship_tag": "ABX9TyPwnRfimy73nLT1zoCASC2l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -338,51 +338,6 @@
     {
       "cell_type": "code",
       "source": [
-        "L=[5,'hello',[3,4,5]]\n",
-        "\n",
-        "L.extend([1,2,3])\n",
-        "print(L)\n",
-        "\n",
-        "#L.extend is the append of composite numbers\n",
-        "#L.pop() removes last object\n",
-        "#L.sort() makes it ascending order, L.sort(reverse=True) makes it descending\n",
-        "#Sort only works with pure lists (lists with values of the same type)\n",
-        "\n",
-        "L2=['bde','a','c','e']\n",
-        "L2.sort()\n",
-        "L2\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "c7uabSbPlPBg",
-        "outputId": "ba716bf9-7fdc-4d03-b9ab-92cc0b8e87f3"
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[5, 'hello', [3, 4, 5], 1, 2, 3]\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['a', 'bde', 'c', 'e']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 5
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "list1=[]\n",
         "cond=True\n",
         "while cond==True:\n",
@@ -402,7 +357,7 @@
         "id": "RxIpjmGQyKd2",
         "outputId": "0ef49b93-10f6-4a17-ee71-709cb9a15f0d"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,38 +375,100 @@
     {
       "cell_type": "code",
       "source": [
-        "#Dictionaries\n",
-        "d={\n",
-        "    'Bob':95,\n",
-        "    'Alice':98,\n",
-        "    'Eve':90\n",
-        "  }\n",
-        "len(d)\n",
+        "import random\n",
         "\n",
-        "#d['Eve']=95\n",
-        "#'David' in d\n",
-        "#d.keys()\n",
-        "#d.values()\n",
-        "#d.items()"
+        "def get_computer_choice():\n",
+        "    return random.choice(['rock', 'paper', 'scissors'])\n",
+        "\n",
+        "def get_winner(user, computer):\n",
+        "    if user == computer:\n",
+        "        return \"It's a tie!\"\n",
+        "    elif (\n",
+        "        (user == 'rock' and computer == 'scissors') or\n",
+        "        (user == 'paper' and computer == 'rock') or\n",
+        "        (user == 'scissors' and computer == 'paper')\n",
+        "    ):\n",
+        "        return \"You win!\"\n",
+        "    else:\n",
+        "        return \"Computer wins!\"\n",
+        "\n",
+        "def main():\n",
+        "    print(\"Welcome to Rock, Paper, Scissors!\")\n",
+        "    while True:\n",
+        "        play = input(\"Do you want to play? (yes/no): \").strip().lower()\n",
+        "        if play != 'yes':\n",
+        "            print(\"Thanks for playing!\")\n",
+        "            break\n",
+        "\n",
+        "        user_choice = input(\"Choose rock, paper, or scissors: \").strip().lower()\n",
+        "        if user_choice not in ['rock', 'paper', 'scissors']:\n",
+        "            print(\"Invalid choice. Please try again.\")\n",
+        "            continue\n",
+        "\n",
+        "        computer_choice = get_computer_choice()\n",
+        "        print(f\"Computer chose: {computer_choice}\")\n",
+        "        result = get_winner(user_choice, computer_choice)\n",
+        "        print(result)\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "7EM0Nxed8d7F",
-        "outputId": "b1431434-fc0f-4ddb-8360-6adcc2012407"
+        "id": "3tPsACypnVHk",
+        "outputId": "8c7c6073-2b4e-40f1-9197-cd3c7da37993"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 32
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Welcome to Rock, Paper, Scissors!\n",
+            "Do you want to play? (yes/no): no\n",
+            "Thanks for playing!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcFee(h):\n",
+        "  fee=5+2.5*h\n",
+        "  if fee<10:\n",
+        "    return 10\n",
+        "  elif fee>20:\n",
+        "    return 20\n",
+        "  else:\n",
+        "    return fee\n",
+        "\n",
+        "def main():\n",
+        "  hours=int(input(\"Enter number of hours: \"))\n",
+        "  value=calcFee(hours)\n",
+        "  print(value)\n",
+        "\n",
+        "if __name__=='__main__':\n",
+        "  main()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QevBm8X7yAvz",
+        "outputId": "b0270620-f9a9-4efa-efb5-eb7aa29c315f"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please insert the amount of hours3\n",
+            "12.5\n"
+          ]
         }
       ]
     }
