--- a/In_Class_Assignment_2.ipynb
+++ b/In_Class_Assignment_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwnRfimy73nLT1zoCASC2l",
+      "authorship_tag": "ABX9TyP26Tn3E3iYnP+X+hWXbof5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -460,7 +460,7 @@
         "id": "QevBm8X7yAvz",
         "outputId": "b0270620-f9a9-4efa-efb5-eb7aa29c315f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,6 +469,44 @@
             "Please insert the amount of hours3\n",
             "12.5\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def reverse(s):\n",
+        "  if len(s)<2:\n",
+        "    return s\n",
+        "  else:\n",
+        "    #return s[-1]+reverse(s[:-1])\n",
+        "    #return reverse(s[1:])+s[0]\n",
+        "    return s[-1]+reverse(s[1:-1])+s[0]\n",
+        "\n",
+        "reverse('hello')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "lNoJAB347onX",
+        "outputId": "5d1e3f43-2c19-4255-b6f1-389ab049bf3c"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'olleh'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 15
         }
       ]
     }
