--- a/In_Class_Assignment_2.ipynb
+++ b/In_Class_Assignment_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP26Tn3E3iYnP+X+hWXbof5",
+      "authorship_tag": "ABX9TyM4DOnNVZxax9UTQ12KFyTu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -493,7 +493,7 @@
         "id": "lNoJAB347onX",
         "outputId": "5d1e3f43-2c19-4255-b6f1-389ab049bf3c"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -507,6 +507,122 @@
           },
           "metadata": {},
           "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "List=[]\n",
+        "def getValues(n):\n",
+        "    for x in range(n):\n",
+        "      while True:\n",
+        "        try:\n",
+        "          weight=float(input(\"Please insert the weight\")) #User enters the weights\n",
+        "          if weight<0:\n",
+        "            print(\"Weight cannot be negative. Try again.\")\n",
+        "          else:\n",
+        "            List.append(weight)\n",
+        "            break\n",
+        "        except ValueError:\n",
+        "          print(\"Invalid input. Please enter a numeric value.\")\n",
+        "    return List\n",
+        "\n",
+        "\n",
+        "def calcAverage(alist):\n",
+        "  try:\n",
+        "    if len(alist)<=2:\n",
+        "      print(\"Not enough values to calculate average (need more than 2).\")\n",
+        "      return None\n",
+        "    total=0\n",
+        "    length=0\n",
+        "    for x in alist[2:]: #Program goes through all the values of alist except the first two\n",
+        "      length=length+1 #Calculates length of list without the first two values\n",
+        "      total=total+x #Adds all the numbers of the list\n",
+        "    return total/length #Returns average\n",
+        "  except ZeroDivisionError:\n",
+        "     print(\"Error: Division by zero.\")\n",
+        "     return None\n",
+        "\n",
+        "try:\n",
+        "  num=int(input(\"How many weights do you want to enter? \")) #User chooses the amount of values to input\n",
+        "  if num<=0:\n",
+        "    print(\"Number of weights must be positive\")\n",
+        "  else:\n",
+        "    getValues(num) #Calls the function getValues\n",
+        "    avg=calcAverage(List) #Calls the function calcAverage\n",
+        "    if avg is not None:\n",
+        "      print(\"Average: \", avg)\n",
+        "except ValueError:\n",
+        "  print(\"Invalid input. Please enter an integer number of weights.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cChPay7IRrCy",
+        "outputId": "7f558f51-ad83-49c7-b454-98219f6a862e"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How many weights do you want to enter? -500\n",
+            "Number of weights must be positive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def roi(cost: float,revenue: float) -> float:\n",
+        "  assert cost>=0, 'Cost must be positive'\n",
+        "  assert isinstance(cost,(int,float)), 'Cost must be numerical'\n",
+        "  assert isinstance(revenue,(int,float)), 'Revenue must be numerical'\n",
+        "\n",
+        "  return (revenue-cost)/cost\n",
+        "\n",
+        "\n",
+        "if __name__==\"__main__\":\n",
+        "  cost=float(input(\"Cost: \"))\n",
+        "  revenue=float(input(\"Revenue: \"))\n",
+        "  ret=roi(cost,revenue)\n",
+        "  print(ret)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 376
+        },
+        "id": "4Vp7rIq0cdYR",
+        "outputId": "654da306-7002-472b-cbbf-daa3fd80f106"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Cost: -500\n",
+            "Revenue: 500\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "AssertionError",
+          "evalue": "Cost must be positive",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-515470196.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m   \u001b[0mcost\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Cost: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m   \u001b[0mrevenue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Revenue: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m   \u001b[0mret\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mroi\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcost\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrevenue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mret\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-515470196.py\u001b[0m in \u001b[0;36mroi\u001b[0;34m(cost, revenue)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mroi\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcost\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrevenue\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m   \u001b[0;32massert\u001b[0m \u001b[0mcost\u001b[0m\u001b[0;34m>=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Cost must be positive'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m   \u001b[0;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcost\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Cost must be numerical'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrevenue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Revenue must be numerical'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAssertionError\u001b[0m: Cost must be positive"
+          ]
         }
       ]
     }
