--- a/In_Class_Assignment_2.ipynb
+++ b/In_Class_Assignment_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM4DOnNVZxax9UTQ12KFyTu",
+      "authorship_tag": "ABX9TyM9/sMe9MWnU5cVhKAxHRpx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,19 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/lxc1570/BTE320/blob/main/In_Class_Assignment_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Parking garage\n",
+        "\n",
+        "Movie theater\n",
+        "\n",
+        "Product prices"
+      ],
+      "metadata": {
+        "id": "pzXMSGO3tuTM"
+      }
     },
     {
       "cell_type": "code",
@@ -51,6 +64,8 @@
         }
       ],
       "source": [
+        "#Income Statement\n",
+        "\n",
         "Sales=float(input(\"Enter sales ($)\"))\n",
         "\n",
         "#Cost of Goods Sold\n",
@@ -75,6 +90,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#Simple Income Statement Calculator\n",
+        "\n",
         "#Inputs\n",
         "D=int(input(\"Insert Annual demand\"))\n",
         "S=float(input(\"Insert reorder cost\"))\n",
@@ -338,6 +355,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#Append items to a list iteratively\n",
+        "\n",
         "list1=[]\n",
         "cond=True\n",
         "while cond==True:\n",
@@ -436,6 +455,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#Parking garage: calcFee() function\n",
+        "\n",
         "def calcFee(h):\n",
         "  fee=5+2.5*h\n",
         "  if fee<10:\n",
@@ -475,6 +496,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#Recursive function: String Reversal\n",
+        "\n",
         "def reverse(s):\n",
         "  if len(s)<2:\n",
         "    return s\n",
@@ -563,7 +586,7 @@
         "id": "cChPay7IRrCy",
         "outputId": "7f558f51-ad83-49c7-b454-98219f6a862e"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -596,32 +619,84 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 376
+          "base_uri": "https://localhost:8080/"
         },
         "id": "4Vp7rIq0cdYR",
-        "outputId": "654da306-7002-472b-cbbf-daa3fd80f106"
+        "outputId": "b32b6ab2-b4d3-42e4-d2c4-51f8f80be502"
       },
-      "execution_count": 18,
+      "execution_count": 1,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Cost: -500\n",
-            "Revenue: 500\n"
+            "Cost: 4\n",
+            "Revenue: 10\n",
+            "1.5\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class names:\n",
+        "  def __init__(self, first, last):\n",
+        "    self.firstname=first\n",
+        "    self.lastname=last\n",
+        "\n",
+        "  def display(self, number):\n",
+        "    if number==1:\n",
+        "      return self.firstname + ', ' + self.lastname\n",
+        "    else:\n",
+        "      return self.lastname + ', ' + self.firstname\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ywuIDkzDiahe"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Greeting:\n",
+        "  def __init__(self, first, last):\n",
+        "    self.first=first\n",
+        "    self.last=last\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return self.first + ' ' + self.last\n",
+        "\n",
+        "  def display(self, reverse=True):\n",
+        "    if reverse: #This is the same as: if reverse==True\n",
+        "      print(f'{self.last}, {self.first}')\n",
+        "    else:\n",
+        "      print(self.first)\n",
+        "\n",
+        "name = Greeting('John', 'Doe')\n",
+        "print(name)\n",
+        "name.display()\n",
+        "name.display(reverse=False)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
         },
+        "id": "-WeBWCVOjopd",
+        "outputId": "a3440065-c0ab-4fc6-8b5a-b4c93cea37ad"
+      },
+      "execution_count": 3,
+      "outputs": [
         {
-          "output_type": "error",
-          "ename": "AssertionError",
-          "evalue": "Cost must be positive",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-515470196.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m   \u001b[0mcost\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Cost: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m   \u001b[0mrevenue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Revenue: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m   \u001b[0mret\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mroi\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcost\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrevenue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mret\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/tmp/ipython-input-515470196.py\u001b[0m in \u001b[0;36mroi\u001b[0;34m(cost, revenue)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mroi\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcost\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrevenue\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m   \u001b[0;32massert\u001b[0m \u001b[0mcost\u001b[0m\u001b[0;34m>=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Cost must be positive'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m   \u001b[0;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcost\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Cost must be numerical'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrevenue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Revenue must be numerical'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAssertionError\u001b[0m: Cost must be positive"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "John Doe\n",
+            "Doe, John\n",
+            "John\n"
           ]
         }
       ]
