--- a/In_Class_Assignment_2.ipynb
+++ b/In_Class_Assignment_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9/sMe9MWnU5cVhKAxHRpx",
+      "authorship_tag": "ABX9TyMeNYF62sZIxtHxkS7AMKVa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -624,7 +624,7 @@
         "id": "4Vp7rIq0cdYR",
         "outputId": "b32b6ab2-b4d3-42e4-d2c4-51f8f80be502"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -656,7 +656,7 @@
       "metadata": {
         "id": "ywuIDkzDiahe"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -688,7 +688,7 @@
         "id": "-WeBWCVOjopd",
         "outputId": "a3440065-c0ab-4fc6-8b5a-b4c93cea37ad"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -700,6 +700,71 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Student:\n",
+        "  def __init__(self, name, number):\n",
+        "    self.__name = name\n",
+        "    self.__number = number\n",
+        "    self.__courses = []\n",
+        "\n",
+        "  def get_name(self):\n",
+        "    return self.__name\n",
+        "\n",
+        "  def get_courses(self):\n",
+        "    return self.__courses\n",
+        "\n",
+        "  def set_name(self, newname):\n",
+        "    self.__name = newname\n",
+        "\n",
+        "  def __len__(self):\n",
+        "    return len(self.__courses)\n",
+        "\n",
+        "  def enroll(self, course):\n",
+        "    if course in self.__courses:\n",
+        "      print('You have already enrolled in', course)\n",
+        "    else:\n",
+        "      self.__courses.append(course)\n",
+        "\n",
+        "s=Student('Bob', 12345)"
+      ],
+      "metadata": {
+        "id": "xssqvTFVNDxb"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Point:\n",
+        "  def __init__(self,x,y):\n",
+        "    self.x = x\n",
+        "    self.y = y\n",
+        "\n",
+        "  def distance(self, other):\n",
+        "    return((self.x - other.x) ** 2 + (self.y - other.y) ** 2) ** 0.5\n",
+        "\n",
+        "class Rectangle:\n",
+        "  def __init__(self):\n",
+        "    self.p1 = Point(0,0)\n",
+        "    self.p2 = Point(4,0)\n",
+        "    self.p3 = Point(4,4)\n",
+        "    self.p4 = Point(0,4)\n",
+        "    self.width = self.p1.distance(self.p2)\n",
+        "    self.height = self.p2.distance(self.p3)\n",
+        "\n",
+        "  def area(self):\n",
+        "    return self.width * self.height\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "lTX0PavyQU6y"
+      },
+      "execution_count": 15,
+      "outputs": []
     }
   ]
 }
