--- a/In_Class_Assignment_2.ipynb
+++ b/In_Class_Assignment_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMeNYF62sZIxtHxkS7AMKVa",
+      "authorship_tag": "ABX9TyMWcTHcCpN0EmZwgzPJ5Hra",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,19 +25,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/lxc1570/BTE320/blob/main/In_Class_Assignment_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Parking garage\n",
-        "\n",
-        "Movie theater\n",
-        "\n",
-        "Product prices"
-      ],
-      "metadata": {
-        "id": "pzXMSGO3tuTM"
-      }
     },
     {
       "cell_type": "code",
@@ -293,6 +280,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#Movie Theater\n",
+        "\n",
         "for ad in range (0,201,25):\n",
         "  revenue=10*(20+2*ad**0.5)-200-ad\n",
         "  print(ad,round(revenue,1))"
@@ -319,6 +308,51 @@
             "150 94.9\n",
             "175 89.6\n",
             "200 82.8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Parking Garage\n",
+        "\n",
+        "print(\"# of hours\\tFee ($)\")\n",
+        "print(\"--------------------\")\n",
+        "for hours in range(1, 9):\n",
+        "  fee = 5 + hours * 2.5\n",
+        "  if fee < 10:\n",
+        "    fee = 10.0\n",
+        "    print(f\"{hours}\\t\\t{fee}\")\n",
+        "  elif fee > 20:\n",
+        "    fee = 20.0\n",
+        "    print(f\"{hours}\\t\\t{fee}\")\n",
+        "  else:\n",
+        "    print(f\"{hours}\\t\\t{fee}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u755v0T0Q3Mv",
+        "outputId": "d393caa9-3477-4cfe-aedc-690ca18a6f0f"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "# of hours\tFee ($)\n",
+            "--------------------\n",
+            "1\t\t10.0\n",
+            "2\t\t10.0\n",
+            "3\t\t12.5\n",
+            "4\t\t15.0\n",
+            "5\t\t17.5\n",
+            "6\t\t20.0\n",
+            "7\t\t20.0\n",
+            "8\t\t20.0\n"
           ]
         }
       ]
@@ -394,6 +428,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Rock Paper Scissors\n",
         "import random\n",
         "\n",
         "def get_computer_choice():\n",
@@ -448,6 +483,43 @@
             "Welcome to Rock, Paper, Scissors!\n",
             "Do you want to play? (yes/no): no\n",
             "Thanks for playing!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Product Prices\n",
+        "\n",
+        "# Create dictionary of products and prices\n",
+        "prices = {\n",
+        "    \"P-01\": 9.95,\n",
+        "    \"P-02\": 10.50\n",
+        "}\n",
+        "\n",
+        "product_id = input(\"Enter product ID: \")\n",
+        "\n",
+        "if product_id in prices:\n",
+        "    print(product_id, prices[product_id])\n",
+        "else:\n",
+        "    print(product_id, \"not found\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l4_0bIZGTVx8",
+        "outputId": "d31a71f0-6b12-4385-f046-306215c2b97d"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter product ID: X-01\n",
+            "X-01 not found\n"
           ]
         }
       ]
@@ -536,6 +608,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#Quality control manager (exceptions)\n",
+        "\n",
         "List=[]\n",
         "def getValues(n):\n",
         "    for x in range(n):\n",
@@ -601,6 +675,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#Part A—Compute Simple ROI (Return on Investment)\n",
+        "\n",
         "def roi(cost: float,revenue: float) -> float:\n",
         "  assert cost>=0, 'Cost must be positive'\n",
         "  assert isinstance(cost,(int,float)), 'Cost must be numerical'\n",
@@ -640,6 +716,60 @@
     {
       "cell_type": "code",
       "source": [
+        "#Loan Payment Calculator\n",
+        "\n",
+        "def loan_payment(principal, annual_rate, years):\n",
+        "    if principal <= 0 or annual_rate <= 0 or years <= 0:\n",
+        "        return \"Error: All inputs must be positive numbers.\"\n",
+        "\n",
+        "    r = annual_rate / 100 / 12\n",
+        "\n",
+        "    n = years * 12\n",
+        "\n",
+        "    payment = (r * principal) / (1 - (1 + r) ** (-n))\n",
+        "\n",
+        "    return payment\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    # Get user input\n",
+        "    principal = float(input(\"Enter loan amount: \"))\n",
+        "    annual_rate = float(input(\"Enter annual interest rate (percent): \"))\n",
+        "    years = int(input(\"Enter number of years: \"))\n",
+        "\n",
+        "    # Call the function\n",
+        "    result = loan_payment(principal, annual_rate, years)\n",
+        "\n",
+        "    # Print the result\n",
+        "    if isinstance(result, str):\n",
+        "        print(result)  # Error message\n",
+        "    else:\n",
+        "        print(f\"Monthly payment: ${result:.2f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DbNfNRO5XG4V",
+        "outputId": "1e01514d-a98f-4d1b-e004-59b2799277cb"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter loan amount: 30000\n",
+            "Enter annual interest rate (percent): 12\n",
+            "Enter number of years: 4\n",
+            "Monthly payment: $790.02\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "class names:\n",
         "  def __init__(self, first, last):\n",
         "    self.firstname=first\n",
@@ -662,6 +792,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#Greeting Class\n",
+        "\n",
         "class Greeting:\n",
         "  def __init__(self, first, last):\n",
         "    self.first=first\n",
@@ -704,6 +836,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#Student Class\n",
+        "\n",
         "class Student:\n",
         "  def __init__(self, name, number):\n",
         "    self.__name = name\n",
@@ -733,12 +867,14 @@
       "metadata": {
         "id": "xssqvTFVNDxb"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#Classes Point & Rectangle\n",
+        "\n",
         "class Point:\n",
         "  def __init__(self,x,y):\n",
         "    self.x = x\n",
@@ -763,7 +899,7 @@
       "metadata": {
         "id": "lTX0PavyQU6y"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     }
   ]
